# rgbd-face-auth

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  data_format.md  display_photo.py  format_code.sh  requirements.txt  test_rgbd_picture.cpp
exp/: .gitignore  README.md  db_helper.py  ias_lab_rgbd  main.py  preprocess_input.py  superface_dataset  test_just_depth.py  test_no_depth.py  test_no_entropy.py  tools.py  www.vap.aau.dk
exp/classifiers/: neural_net.py
exp/common/: constants.py  db_helper.py  display_photo.py  tools.py
exp/controller/: normalization.py
exp/experiments/no_normalization/: preprocess_input.py
exp/experiments/no_rotation_channels_with_hogs/: constants.py  main.py  preprocess_input.py
exp/experiments/no_rotation_channels_without_hogs/: constants.py  main.py  preprocess_input.py
exp/experiments/no_rotation_concat_with_hogs/: constants.py  main.py  preprocess_input.py
exp/experiments/templates/: base_preprocess_input.py
exp/face_rotation/: example.py  face_points.py  find_angle.py  neural_net.py  other.py  preprocess_input.py  recentre.py  rotate.py  test.py  trim_face.py
exp/model/: face.py
exp/no_normalization/: main.py  preprocess_input.py
exp/rotated_knn/: preprocess_input.py
exp/rotation_on_train_set/: main.py  preprocess_input.py
face_auth/: .gitignore  README.md
face_auth/classifiers/: README.md  classification_results.py  hog_classifier.py  neural_net.py
face_auth/common/: README.md  constants.py  db_helper.py  tools.py
face_auth/controller/: README.md  normalization.py
face_auth/experiments/: README.md
face_auth/experiments/ensembled/: constants.py  main.py  preprocess_input.py
face_auth/experiments/ensembled_binary/: constants.py  main.py  preprocess_input.py
face_auth/experiments/hogs_only/: constants.py  main.py  preprocess_input.py
face_auth/experiments/no_normalization/: preprocess_input.py
face_auth/experiments/no_rotation_channels_with_hogs/: main.py  preprocess_input.py
face_auth/experiments/no_rotation_channels_without_hogs/: main.py  preprocess_input.py
face_auth/experiments/no_rotation_concat_with_hogs/: main.py  preprocess_input.py
face_auth/experiments/templates/: base_preprocess_input.py  load_database.py
face_auth/face_rotation/: README.md  example.py  other.py  recentre.py  rotate.py  structure_filters.py  trim_face.py
face_auth/model/: README.md  face.py
kinect-test/: .gitignore  CMakeLists.txt  main.cpp
kinect2_test/: .gitignore  CMakeLists.txt  Makefile  kinect2_test.cbp  main.cpp  photo_depth.txt  photo_ir.txt
kinect_test/: .gitignore  CMakeLists.txt  display_photo.py  main.cpp  photo_kinect1_depth.txt  photo_kinect1_ir.txt
libkinect/: .clang-format  CMakeLists.txt  README.md  format_code.sh
libkinect/src/: file_display.cpp  libkinect.hpp  live_display.cpp  picture.hpp  thumbnailer.cpp
libkinect/thumbnailer/: depth-ir-mime.xml
libkinect/utils/: depth-ir.thumbnailer  display_photo.py  thumbnailer-install.txt
opencv_test/: CMakeLists.txt  from_file.cpp  from_kinect.cpp  main.cpp
photos/: .gitignore  clear_photos.sh
skin-detection/: find-model.py
skin_detection/: find_model.py  rgb_model.py
skin_detection/prototype/: circle_leds.py  set_led.py
skin_recognition/: common  rgb_model.py  take_ir_photos.py
skin_recognition/prototype/arduino_project/: arduino_project.ino
src/: basic_types.h  basic_types.hpp  file_display.cpp  libkinect.hpp  live_display.cpp  picture.hpp  rgbd_picture.h  simple_display.cpp  take_photo.cpp  thumbnailer.cpp
src/libkinect/: libkinect.cpp  libkinect.hpp
utils/: depth-mime.xml  depth.thumbnailer  display_photo.py  ir-mime.xml  thumbnailer-install.txt
whitepaper/: Makefile  bibliography.bib  mim-paper.tex  mim_paper.tex  pracamgr.cls  temp-paper.tex
whitepaper/content/: face-auth.tex  face_auth.tex  introduction.tex  recapitulation.tex  skin-recognition.tex
whitepaper/frontend/: abstract.tex
whitepaper/surroundings/: abstract.tex  acknowledgment.tex  formal-ending.tex
