cmake_minimum_required(VERSION 3.9)
project(opencv_test)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 17)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
file(COPY haarcascades/haarcascade_frontalface_alt.xml haarcascades/haarcascade_eye_tree_eyeglasses.xml DESTINATION haarcascades)